--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: artsy_prj
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.0
   country_picker: ^2.0.23
   cupertino_icons: ^1.0.6
   email_validator: ^2.1.17
@@ -38,7 +39,6 @@ dependencies:
   intl: ^0.18.1
   path_provider: ^2.1.1
   sqflite: ^2.3.0
-
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +56,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -64,25 +63,28 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/images/logo.png
-  - assets/images/landing.jpg
-  - assets/images/profile.jpg
-  - assets/images/insight.jpg
-  - assets/images/google_logo.png
-  - assets/images/facebook_logo.png
-  - assets/fonts/nunito.ttf
-  - assets/fonts/nunito-i.ttf
-  - assets/images/art1.png
-  - assets/images/art2.png
-  - assets/images/art3.png
-  - assets/images/art4.png
-  - assets/images/art5.png
-  - assets/images/artist1.png
-  - assets/images/artist2.png
-  - assets/images/artist3.png
-  - assets/images/artist4.png
-  - assets/images/artist5.png
-  - 
+    - assets/images/logo.png
+    - assets/images/landing.jpg
+    - assets/images/profile.jpg
+    - assets/images/insight.jpg
+    - assets/images/google_logo.png
+    - assets/images/facebook_logo.png
+    - assets/fonts/nunito.ttf
+    - assets/fonts/nunito-i.ttf
+    - assets/images/art1.png
+    - assets/images/art2.png
+    - assets/images/art3.png
+    - assets/images/art4.png
+    - assets/images/art5.png
+    - assets/images/artist1.png
+    - assets/images/artist2.png
+    - assets/images/artist3.png
+    - assets/images/artist4.png
+    - assets/images/artist5.png
+    - assets/images/vangogh.jpeg
+    - assets/images/monet.jpeg
+    - assets/images/davinci.jpeg
+    -
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
